--- a/web.css
+++ b/web.css
@@ -70,25 +70,100 @@ h1, h3, h5{
     border-radius: 8px;
     display: flex;
     justify-content: center;
+    align-items: center;
     flex-direction: column;
 }
 .box1, .box2, .box3{
-    background: #f5f5f5;
-    width: 350px;
-    height: 50px;
-    margin: 20px;
-    border-radius: 8px;
     display: flex;
     align-items: center;
+    margin: 10px;
+    border-radius: 8px;
+    -webkit-border-radius: 8px;
+    -moz-border-radius: 8px;
+    -ms-border-radius: 8px;
+    -o-border-radius: 8px;
 }
 .box4{
-    background: #f5f5f5;
-    width: 350px;
-    height: 80px;
     margin: 20px;
     border-radius: 8px; 
 }
-.lastbox{
+input, .box1, .box2, .box3{
+    width: 350px;
+    height: 40px;
+    outline: none;
+    /* padding: 0 20px; */
+    line-height: 40px;
+    border-radius: 10px;
+    -webkit-border-radius: 10px;
+    -moz-border-radius: 10px;
+    -ms-border-radius: 10px;
+    -o-border-radius: 10px;
+    border: 1px solid #777;
+    background: white;
+    transition: 0.1s ease;
+    -webkit-transition: 0.1s ease;
+    -moz-transition: 0.1s ease;
+    -ms-transition: 0.1s ease;
+    -o-transition: 0.1s ease;
+}
+.name1, .name2, .name3{
+    position: absolute;
+    color: #2A5155;
+    padding: 0 20px;
+    margin: 0 10px;
+    transition: 0.2s ease;
+    -webkit-transition: 0.2s ease;
+    -moz-transition: 0.2s ease;
+    -ms-transition: 0.2s ease;
+    -o-transition: 0.2s ease;
+}
+input, .box4{
+    width: 350px;
+    outline: none;
+    /* padding: 0 20px; */
+    line-height: 40px;
+    border-radius: 10px;
+    -webkit-border-radius: 10px;
+    -moz-border-radius: 10px;
+    -ms-border-radius: 10px;
+    -o-border-radius: 10px;
+    border: 1px solid #777;
+    background: white;
+    transition: 0.1s ease;
+    -webkit-transition: 0.1s ease;
+    -moz-transition: 0.1s ease;
+    -ms-transition: 0.1s ease;
+    -o-transition: 0.1s ease;
+}
+.name4{
+    position: absolute;
+    color: #2A5155;
+    padding: 0 20px;
+    margin: 0 10px;
+    transition: 0.2s ease;
+    -webkit-transition: 0.2s ease;
+    -moz-transition: 0.2s ease;
+    -ms-transition: 0.2s ease;
+    -o-transition: 0.2s ease;
+}
+input:focus,
+input:valid{
+    color: #2A5155;
+    border: 2px solid #eee;
+}
+input:focus + .name1,
+input:valid + .name1{
+    color: #2A5155;
+    height: 20px;
+    line-height: 20px;
+    transform: translate(-15px, -16px) scale(0.88);
+    -webkit-transform: translate(-15px, -16px) scale(0.88);
+    -moz-transform: translate(-15px, -16px) scale(0.88);
+    -ms-transform: translate(-15px, -16px) scale(0.88);
+    -o-transform: translate(-15px, -16px) scale(0.88);
+    z-index: 1111;
+}
+.bigbox .lastbox{
     background:#D9EEED ;
     width: 350px;
     height: 50px;
